<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        >
        <item
            android:title="@string/Home"
            android:id="@+id/Home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/add_sub"
            android:icon="@drawable/arrow_icon"
            android:title="@string/addsub" />
        <item
            android:id="@+id/only_sub"
            android:icon="@drawable/arrow_icon"
            android:title="@string/onlysub" />
        <item
            android:id="@+id/multiply"
            android:icon="@drawable/arrow_icon"
            android:title="@string/multiply" />
        <item
            android:id="@+id/ScalerMulti"
            android:icon="@drawable/arrow_icon"
            android:title="@string/ScalerMult" />
        <item
            android:id="@+id/Swap"
            android:icon="@drawable/arrow_icon"
            android:title="@string/swap" />
        <item
            android:id="@+id/Clone"
            android:icon="@drawable/arrow_icon"
            android:title="@string/clone" />
        <item
            android:id="@+id/Transpose"
            android:icon="@drawable/arrow_icon"
            android:title="@string/transpose" />
        <item
            android:id="@+id/exponent"
            android:icon="@drawable/arrow_icon"
            android:title="@string/exponent" />
        <item
            android:id="@+id/determinant"
            android:icon="@drawable/arrow_icon"
            android:title="@string/determinant" />
        <item
            android:id="@+id/RankofMat"
            android:icon="@drawable/arrow_icon"
            android:title="@string/Rankof"
            android:visible="false"/> <!--Todo : Make this Visible in next version-->
        <item
            android:id="@+id/inverse"
            android:icon="@drawable/arrow_icon"
            android:title="@string/inverse" />
        <item
            android:id="@+id/adjoint"
            android:icon="@drawable/arrow_icon"
            android:title="@string/adjoint" />
        <item
            android:id="@+id/functional"
            android:icon="@drawable/arrow_icon"
            android:title="@string/function" />
    </group>
    <group android:id="@+id/helpcat">
    <item
        android:title="@string/LabelHelp"
        android:id="@+id/nav_help"
        android:icon="@drawable/thumbsup"/>
    <item
        android:title="@string/feedback"
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ratingheart"/>
    </group>

</menu>
