<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ConfirmCreate"
        android:title="@string/Confirm"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ClearAll"
        android:title="@string/Clear"
        app:showAsAction="never"
        android:orderInCategory="1"
        />
<item
    android:id="@+id/InputRandom"
    android:title="@string/RandomInput"
    app:showAsAction="never"
    android:orderInCategory="2"
    />
    <item
        android:title="@string/RandomInputFloat"
        android:id="@+id/InputRandomFloat"
        app:showAsAction="never"
        android:orderInCategory="3"
        />
    <item
        android:title="@string/FillallAs1"
        android:id="@+id/Input1Empty"
        app:showAsAction="never"
        android:orderInCategory="3"
        />
    <item
        android:title="@string/FillasZero"
        android:id="@+id/FillAllZero"
        android:orderInCategory="4"
        app:showAsAction="never"/>
    <item
        android:id="@+id/FillCustom"
        android:title="@string/CustomFill"
        android:orderInCategory="5"
        app:showAsAction="never"/>
</menu>