<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:fadeScrollbars="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_height="200dp"
        android:layout_width="265dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp"
        android:id="@+id/CardView1"
        android:layout_marginTop="60dp"
        app:cardElevation="5dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="@color/cardColor">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/mainlogo"
                android:contentDescription="@string/Logo"
                android:id="@+id/imageView2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/AppNameShort"
                android:layout_below="@id/imageView2"
                android:layout_centerHorizontal="true"
                android:id="@+id/heading"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slogan_text"
                android:text="@string/slogan"
                android:layout_below="@+id/heading"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/slogan_text"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView4"
                android:text="@string/about_app" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/CardView1"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/reserve"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/TextViewCard1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextViewCard1"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:id="@+id/TextViewCard2"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:text="@string/certificate"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/License"
                android:layout_below="@id/TextViewCard2"
                android:id="@+id/TextViewCard3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Maintainer"
            android:layout_below="@id/TextViewCard3"
            android:id="@+id/TextViewCard4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/version"
            android:layout_below="@id/TextViewCard4"
            android:id="@+id/TextViewCard6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Sources"
            android:layout_below="@id/TextViewCard6"
            android:id="@+id/TextViewCard5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>
